# selfishserver

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: hello.html  httpd.ron  main.rs  routing.rs  security.rs  thread_pool.rs
src/error_pages/: 404.html  405.html
src/http/: mod.rs  types.rs  utils.rs
