[package]
name = "selfserve"
version = "0.1.2-beta"
authors = ["Aidan T. Manning <periodicaidan@gmail.com>"]
edition = "2018"
description = "An HTTP server I made for purely selfish reasons"
repository = "https://github.com/periodicaidan/selfishserver"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"
ron = "0.5.1"
serde = { version = "*", features = ["serde_derive"] }
rustls = "0.16.0"
percent-encoding = "2.1.0"
colored = "1.8.0"

[profile.release]
lto = true
